--- a/a.css
+++ b/a.css
@@ -15,7 +15,10 @@ p {
 }
 
 #gloves {
-  background-position-x: 20px;
+  background-image: url("./gloves.png");
+  width: 50px;
+  height: 50px;
+  background-position-x: 100px;
   background-position-y: 80px;
   border: 5px solid darkblue;
 }
