--- a/a.css
+++ b/a.css
@@ -15,10 +15,8 @@ p {
 }
 
 #gloves {
-  background-image: url("./gloves.png");
-  width: 50px;
-  height: 50px;
-  background-position-x: 100px;
-  background-position-y: 80px;
+  position: absolute;
+  left: 80px;
+  top: 130px;
   border: 5px solid darkblue;
 }
